--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ nav{
     justify-self: center;
     padding: 12px 90px 10px 90px;
     background-color: rgb(255, 255, 255);
+    z-index:1;
 }
 nav .logo{
   font-family: "Agbalumo", system-ui;
@@ -50,6 +51,7 @@ ul a:hover{
     display: flex;
     justify-content: space-between;
     height: 100vh;
+    z-index:0;
 }
 .first-paragraph{
     font-size: 17px;
@@ -428,4 +430,5 @@ ul a:hover{
 html {
     scroll-behavior: smooth;
 }
+
 
