--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Meddon&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Agbalumo&display=swap');
@@ -293,21 +292,20 @@ ul a:hover{
     margin-left: 20px;
 }
 @media  screen and (max-width:320px) {
-    nav{
+       nav{
         max-width: 100%;
         justify-self: center;
         padding: 10px;
-        font-size: 15px;
     }
-   .introduction{
+  .introduction{
     display: flex;
-    justify-content: space-around;
+    justify-content:space-evenly;
     flex-direction: column-reverse;
+    padding-bottom: 0px;
    }
     .intro-right img{
      width: 100%;
         height: auto;
-        justify-self: center;
    }
    #services{
     max-width: 100%;
@@ -342,10 +340,26 @@ ul a:hover{
     margin:20px;
     border-radius: 10px;
 }
+#services h1{
+    font-size: 30px;
+    padding-left: 10px;
+}
+#skills h1{
+    font-size: 30px;
+    padding-left: 10px;
+}
+#projects h1{
+    font-size: 30px;
+    padding-left: 10px;
+}
 #about{
     display: flex;
     flex-direction: column;
 }
+#about h1{
+    font-size: 30px;
+    padding-left: 10px;
+    }
 #about img{
     height: auto;
     max-width: 100%;
@@ -369,15 +383,15 @@ ul a:hover{
         justify-self: center;
         padding: 10px;
     }
-   .introduction{
-    padding-top:50px;
+  .introduction{
     display: flex;
+    justify-content:space-evenly;
     flex-direction: column-reverse;
+    padding-bottom: 0px;
    }
-   .intro-right img{
+    .intro-right img{
      width: 100%;
         height: auto;
-        justify-self: center;
    }
    #services{
     max-width: 100%;
@@ -412,10 +426,26 @@ ul a:hover{
     margin:20px;
     border-radius: 10px;
 }
+#services h1{
+    font-size: 30px;
+    padding-left: 10px;
+}
+#skills h1{
+    font-size: 30px;
+    padding-left: 10px;
+}
+#projects h1{
+    font-size: 30px;
+    padding-left: 10px;
+}
 #about{
     display: flex;
     flex-direction: column;
 }
+#about h1{
+    font-size: 30px;
+    padding-left: 10px;
+    }
 #about img{
     height: auto;
     max-width: 100%;
