--- a/style.css
+++ b/style.css
@@ -1,18 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Meddon&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Agbalumo&display=swap');
-*{
-    margin: 0;
-    padding: 0;
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
 }
+
+* {
+  box-sizing: border-box;
+}
+
 nav{
     display: flex;
     position: fixed;
     width: 98%;
     justify-content: space-between;
     justify-self: center;
-    padding: 12px 90px 10px 90px;
-    background-color: rgb(255, 255, 255);
+    padding: 7px 90px 0 90px;
+    background: rgba(255,255,255,0.2);
+    backdrop-filter: blur(10px);
     z-index: 3;
 }
 nav .logo{
@@ -23,7 +31,7 @@ nav .logo{
     text-decoration: none;
     color: rgb(142, 18, 224);;
     cursor: pointer;
-    margin-top: -2px;
+    margin-top: 2px;
 }
 nav ul{
     list-style: none;
@@ -110,10 +118,10 @@ ul a:hover{
     padding: 20px;
 }
 #services{
-    padding: 35px;
+    padding: 30px;
 }
 .flex-body{
-    padding-top: 25px;
+    padding-top: 6px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2,1fr);
@@ -140,19 +148,19 @@ ul a:hover{
     height: 180px;
 }
 #projects{
-    padding: 40px;
+    padding: 30px;
     background-color: #f7f7f7;
     color: #0a0000;
 }
 #projects h1{
-    color: #000000;
+    color: #070707;
     font-size: 40px;
     padding-left: 30px;
 }
 .pro{
     position:relative;
     width: 100%;
-    height: 270px;
+    height:fit-content;
     display: flex;
     justify-self: center;
     flex-direction: row;
@@ -163,7 +171,7 @@ ul a:hover{
     border-radius: 10px;
 }
 .contain-projects{
-    padding-top: 35px;
+    padding-top: 6px;
     display: flex;
     flex-direction: column;
     margin-bottom: 40px;
@@ -227,7 +235,7 @@ ul a:hover{
     padding: 20px 0 10px 0;
 }
 #skills{
-      padding: 40px;
+      padding: 30px;
     background-image: url("images/tabl.jpg");
     background-position: center;
     background-size: cover;
@@ -245,7 +253,7 @@ ul a:hover{
     justify-self: center;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: 100px;
-    margin: 20px 0 0 70px;
+    margin: 10px 0 0 70px;
 }
 .cskills p{
     margin-bottom: 10px;
@@ -290,22 +298,109 @@ ul a:hover{
 }
 #contact a{
     margin-left: 20px;
+    color: rgb(142, 18, 224);
 }
-@media  screen and (max-width:320px) {
+#sidebar, #cancel{
+    display:none;
+}
+.hambuger, .cancel{
+    display:none;
+}
+@media  screen and (max-width:425px) {
+ #sidebar{
+          display:none;
+        }
+        .hambuger{
+            font-size: 10px;
+            justify-self: flex-end;
+            padding: 6px;
+            display: block;
+            background-color: rgb(142, 18, 224);
+            border-radius:5px;
+            color: white;
+            cursor: pointer;
+            position: sticky;
+            top: 10px;
+            left: 10px;
+            z-index: 2;
+        }
+        .cancel{
+            font-size: 17px;
+            padding: 6px;
+            display: block;
+            color: rgb(0, 0, 0);
+            cursor: pointer;
+            position: absolute;
+            top: 7px;
+            right: 20px;
+            z-index: 2;
+        }
+     #sidebar:checked ~ ul {
+            top:0;
+            left: 0;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+            align-items: center;
+            background: rgba(255,255,255,0.2);
+            backdrop-filter: blur(10px);
+            gap:15px;
+        }
+        #cancel{
+            display: none;
+        }
+    #cancel:checked ~ ul{
+            display: none; 
+    }
+        nav ul{
+             position: fixed;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #222;
+            text-align:center;
+            align-content:center;
+            justify-content: center;
+            color: white;
+            padding: 60px 20px;
+            box-shadow: 2px 0 5px rgba(223, 97, 235, 0.5);
+            transition: left 0.3s ease;
+            z-index: 3;
+            display:none;
+        }
        nav{
-        max-width: 100%;
-        justify-self: center;
-        padding: 10px;
+        width:100%;
+        justify-content: space-between ;
+        gap: 90px;
+        padding: 8px 15px;
     }
   .introduction{
     display: flex;
+    margin-top:40px;
+    padding:15px;
+    text-align: center;
     justify-content:space-evenly;
     flex-direction: column-reverse;
-    padding-bottom: 0px;
+    height:auto;
    }
     .intro-right img{
      width: 100%;
         height: auto;
+        margin:0 auto;
+   }
+   .intro-left b{
+    font-size: 28px;
+   }
+   .nav-button{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    align-self: center;
+   }
+   .nav-button a{
+    text-align: center;
    }
    #services{
     max-width: 100%;
@@ -323,6 +418,7 @@ ul a:hover{
    }
    .pro{
     position:relative;
+    margin:0 auto;
     width: 100%;
     height:fit-content;
     display: flex;
@@ -336,29 +432,30 @@ ul a:hover{
 .pro img{
     height: auto;
     width: 80%;
+    max-width: 100%;
     align-self: center;
     margin:20px;
     border-radius: 10px;
 }
 #services h1{
-    font-size: 30px;
-    padding-left: 10px;
+    font-size: 26px;
+    text-align: center;
 }
 #skills h1{
-    font-size: 30px;
-    padding-left: 10px;
+    font-size: 26px;
+    text-align: center;
 }
 #projects h1{
-    font-size: 30px;
-    padding-left: 10px;
+    font-size: 26px;
+    text-align: center;
 }
 #about{
     display: flex;
     flex-direction: column;
 }
 #about h1{
-    font-size: 30px;
-    padding-left: 10px;
+    font-size: 26px;
+    text-align: center;
     }
 #about img{
     height: auto;
@@ -368,106 +465,29 @@ ul a:hover{
     padding: 4px;
     border: 1px solid rgb(142, 18, 224);
 }
-.overlay{
-    display: none;
-}
-.cskills{
-    display:flex;
-    gap: 20px;
-    align-self: center;
-}
-}
-@media  screen and (max-width:760px) {
-    nav{
-        max-width: 100%;
-        justify-self: center;
-        padding: 10px;
-    }
-  .introduction{
-    display: flex;
-    justify-content:space-evenly;
-    flex-direction: column-reverse;
-    padding-bottom: 0px;
-   }
-    .intro-right img{
-     width: 100%;
-        height: auto;
-   }
-   #services{
-    max-width: 100%;
-    justify-self: center;
-   }
-   .flex-body{
-    padding-top: 15px;
-    display: flex;
+#contact{
     flex-direction: column;
-    justify-content: center;
-    justify-self: center;
-   }
-   .fence{
-    max-width: 100%;
-   }
-   .pro{
-    position:relative;
-    width: 100%;
-    height:fit-content;
-    display: flex;
-    justify-self: center;
-    flex-direction: column;
-}
-.explanation{
-    border-top: 3px solid rgb(142, 18, 224);
-    border-left: 0px;
-}
-.pro img{
-    height: auto;
-    width: 80%;
-    align-self: center;
-    margin:20px;
-    border-radius: 10px;
-}
-#services h1{
-    font-size: 30px;
-    padding-left: 10px;
-}
-#skills h1{
-    font-size: 30px;
-    padding-left: 10px;
+    align-items: center;
+    gap: 15px;
 }
 #contact h1{
-    font-size: 30px;
-    padding-left: 10px;
-    }
-#projects h1{
-    font-size: 30px;
-    padding-left: 10px;
-}
-#about{
-    display: flex;
-    flex-direction: column;
-}
-#about h1{
-    font-size: 30px;
-    padding-left: 10px;
-    }
-#about img{
-    height: auto;
-    max-width: 100%;
-    object-fit: contain;
-    align-self: center;
-    padding: 4px;
-    border: 1px solid rgb(142, 18, 224);
+    font-size: 26px;
 }
 .overlay{
     display: none;
 }
 .cskills{
-    display:flex;
-    gap: 20px;
+    display: flex;
+    flex-direction:column;
+    gap:20px;
     align-self: center;
 }
+}
+@media screen and (max-width:768px){
+    nav{
+        padding:10px;
+    }
 }
 html {
     scroll-behavior: smooth;
 }
-
