--- a/style.css
+++ b/style.css
@@ -341,6 +341,7 @@ ul a:hover{
             flex-direction: column;
             width: 100%;
             height: 100%;
+       justify-self:center;
             align-items: center;
             background: rgba(255,255,255,0.2);
             backdrop-filter: blur(10px);
@@ -490,4 +491,5 @@ ul a:hover{
 html {
     scroll-behavior: smooth;
 }
+
 
