--- a/style.css
+++ b/style.css
@@ -336,17 +336,17 @@ ul a:hover{
             z-index: 2;
         }
      #sidebar:checked ~ ul {
-            left: 0;
+            top:0;
+            left:0;
             display: flex;
             flex-direction: column;
             width: 100%;
-            height: 100%;
-       justify-self:center;
+            height: 100dvh;
             align-items: center;
             background: rgba(255,255,255,0.2);
             backdrop-filter: blur(10px);
             gap:15px;
-        }
+         }
         #cancel{
             display: none;
         }
@@ -355,10 +355,9 @@ ul a:hover{
     }
         nav ul{
              position: fixed;
-            top: 0;
             width: 100%;
             height: 100%;
-            background-color: #222;
+            background-color: rgba(255,255,255,0.2);
             text-align:center;
             align-content:center;
             justify-content: center;
@@ -371,6 +370,7 @@ ul a:hover{
         }
        nav{
         width:100%;
+        height: auto;
         justify-content: space-between ;
         gap: 90px;
         padding: 8px 15px;
@@ -491,5 +491,3 @@ ul a:hover{
 html {
     scroll-behavior: smooth;
 }
-
-
